--- a/infra/overlays/dev/kustomization.yaml
+++ b/infra/overlays/dev/kustomization.yaml
@@ -6,10 +6,12 @@ namePrefix: dev-
 commonLabels:
   env: dev
 
+#Update Replica count
 patches:
   - client-replica.yaml
   - server-replica.yaml
 
+#Seperate Namespace
 resources:
   - namespace.yaml
 
